# freesoundconnect

./: .gitignore  LICENSE  README.md  freesound_connect.py  oauth_credentials.example.py  pyproject.toml
.github/workflows/: build.yml  electron-build.yml
app/: .gitignore  README.md  angular.json  electron-builder.yml  package-lock.json  package.json  tsconfig.electron.json
app/electron/: credentials.example.json  credentials.ts  downloads.ts  freesound-api.ts  main.ts  oauth.ts  paths.ts  preload.ts  store.ts
app/src/: index.html  styles.css
app/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
app/src/app/audio/: wav.ts
app/src/app/components/: login-dialog.css  login-dialog.html  login-dialog.ts  sound-list.css  sound-list.html  sound-list.ts
app/src/app/models/: sound.ts
app/src/app/pages/: playlists-page.css  playlists-page.html  playlists-page.ts  search-page.css  search-page.html  search-page.ts
app/src/app/player/: player-bar.css  player-bar.html  player-bar.ts
app/src/app/services/: auth.service.ts  drag.service.ts  fsc.ts  library.service.ts  player.service.ts  search.service.ts  toast.service.ts
assets/: icon.icns
freesound_connect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
freesoundconnect/: __init__.py  api.py  app.py  audio.py  auth.py  config.py  login_dialog.py  main_window.py  nav_sidebar.py  player_bar.py  playlists_page.py  results_tree.py  search_page.py  shotlist_popup.py  store.py  theme.py  waveform.py  workers.py
scripts/: build.ps1  build.sh  render_icons.py
(+3 files in other folders)
